--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/windows,codeigniter,visualstudiocode
+/application/config/database.php
+/application/config/config.php
